# mileshunt

./: .gitignore  Dockerfile  pyproject.toml
deploy/: deploy.sh  docker-compose.yml  nginx.conf
mileshunt/: __init__.py  admin_setup.py  airports.py  app.py  cli.py  db.py  destinations.py  search.py  skyteam.py  xp.py
static/: admin.html  app.js  best.html  index.html  style.css
